--- a/setup.cfg
+++ b/setup.cfg
@@ -38,3 +38,11 @@ exclude =
 
 [bdist_wheel]
 universal = 1
+
+[flake8]
+# ignore line size
+max-line-length = 300
+
+[egg_info]
+tag_date = False
+tag_build = +atl.1.0
