--- a/setup.cfg
+++ b/setup.cfg
@@ -11,30 +11,31 @@ url = https://github.com/django-polymorphic/django-polymorphic
 download_url = https://github.com/django-polymorphic/django-polymorphic/tarball/master
 keywords = django, polymorphic
 classifiers =
-	Development Status :: 5 - Production/Stable
-	Environment :: Web Environment
-	Framework :: Django
-	Framework :: Django :: 1.11
-	Framework :: Django :: 2.0
-	Intended Audience :: Developers
-	License :: OSI Approved :: BSD License
-	Operating System :: OS Independent
-	Programming Language :: Python :: 2.7
-	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3.4
-	Programming Language :: Python :: 3.5
-	Programming Language :: Python :: 3.6
-	Topic :: Database
+    Development Status :: 5 - Production/Stable
+    Environment :: Web Environment
+    Framework :: Django
+    Framework :: Django :: 1.11
+    Framework :: Django :: 2.0
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Topic :: Database
 
 [options]
 packages = find:
 include_package_data = True
 install_requires =
-	Django >= 1.11
+    six
+    Django >= 1.11
 
 [options.packages.find]
 exclude =
-	polymorphic.tests
+    polymorphic.tests
 
 [bdist_wheel]
 universal = 1
@@ -45,4 +46,4 @@ max-line-length = 300
 
 [egg_info]
 tag_date = False
-tag_build = +atl.1.0
+tag_build = +atl.2.0
