--- a/tox.ini
+++ b/tox.ini
@@ -1,34 +1,32 @@
 [tox]
 envlist =
-	py27-django{111}
-	py34-django{111,20}
-	py35-django{111,20,master}
-	py36-django{111,20,21,master}
-	py37-django{21,master}
-	docs
+    py27-django111
+    py37-django{111,22,30}
+    docs
 
 [testenv]
 setenv =
-	PYTHONWARNINGS = all
-	postgres: DEFAULT_DATABASE = postgres:///default
-	postgres: SECONDARY_DATABASE = postgres:///secondary
+    PYTHONWARNINGS = all
+    postgres: DEFAULT_DATABASE = postgres:///default
+    postgres: SECONDARY_DATABASE = postgres:///secondary
 deps =
-	coverage
-	dj-database-url
-	django111: Django >= 1.11, < 2.0
-	django20: Django ~= 2.0
-	django21: Django ~= 2.1
-	djangomaster: https://github.com/django/django/archive/master.tar.gz
-	postgres: psycopg2
+    six
+    coverage
+    dj-database-url
+    django111: Django >= 1.11, < 2.0
+    django20: Django >= 2.0, < 2.1
+    django22: Django >= 2.2, < 3.0
+    django39: Django >= 3.0, < 3.1
+    postgres: psycopg2
 commands =
-	coverage run --source polymorphic runtests.py
+    coverage run --source polymorphic runtests.py {posargs}
 
 [testenv:docs]
 deps =
-	Sphinx
-	sphinx_rtd_theme
-	Django
-	django-extra-views
+    Sphinx
+    sphinx_rtd_theme
+    Django < 3.0
+    django-extra-views
 changedir = docs
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
